# bookweald-rs

./: .gitignore  Cargo.toml  LICENSE  tracing.toml
src/: alias.rs  blacklist.rs  book.rs  config.rs  extract.rs  fb2_parse.rs  lib.rs  main.rs  normalize.rs  person.rs  tool.rs  validate.rs
tests/: test_alias_loading.rs  test_fb2_parse.rs
tests/bads/: aliases.json  invalid_title.fb2  no_title.fb2  readme.rst
tests/fixtures/: aliased_author.fb2  aliases.json  cp1251_simple.fb2  koi8r_simple.fb2  no_xml_decl.fb2  readme.rst  utf8_simple.fb2
