[package]
name = "bookweald-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bookweald"
path = "src/tool.rs"

[dependencies]
zip = "8.5.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
hex = "0.4.3"
md5 = "0.8.0"
tracing-appender = "0.2.5"
tracing-config = "0.2.2"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.39.2", features = ["encoding"] }
serde_json = "1.0.149"
dirs = "6.0.0"
tempfile = "3.27.0"
json5 = "1.3.1"
rayon = "1.12.0"

